to fixe scrool on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -248,8 +248,7 @@ body {
     justify-content: center;
     background-image: url(./assets/img/desk.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
-    background-position: fixed;
+    background-attachment: fixed;
 
   }
 
